<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail_flower"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:text="@string/nama_flower"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:id="@+id/tv_set_name"
            android:gravity="center_horizontal" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="180dp"
                android:layout_height="220dp"
                android:layout_marginBottom="4dp"
                android:scaleType="centerCrop"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                tools:src="@android:color/darker_gray"/>
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/spesies"
                    android:layout_gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_spesies"/>
                <TextView
                    android:layout_gravity="left"
                    android:textColor="@android:color/black"
                    android:text="@string/konten_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_item_spesies"/>
            </LinearLayout>



        </LinearLayout>

        <TextView
            android:text="@string/kelasifikasi"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="11dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>

        <androidx.cardview.widget.CardView
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="18dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/title_identity"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="10sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"/>

                <TextView
                    android:text="@string/content_identity"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_set_identity"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <TextView
            android:text="@string/flower_overview"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="12sp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="18dp">

            <TextView
                android:text="@string/content_overview"
                android:textColor="@android:color/black"
                android:justificationMode="inter_word"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_set_overview"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>